Quorum3/Library/Tests/TypeChecker/Pass/IntegerLowestOneBit.quorum
class Main
    action Main
        Integer t 
        t:SetValue(381)
        integer p = 381

        output t:LowestOneBit()
        output p:LowestOneBit()
    end
end