Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntegerBoolean.quorum
class Main
    action Main
        integer int
        int = cast(integer, true)
    end
end
